<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OctoDroid</string>
    <string name="action_settings">Settings</string>
    <string name="machine_state">Machine State:</string>
    <string name="file">File:</string>
    <string name="filament">Filament:</string>
    <string name="estimated_print_time">Estimated Print Time:</string>
    <string name="timelapse">Timelapse:</string>
    <string name="height">Height:</string>
    <string name="print_time">Print Time:</string>
    <string name="print_time_left">Print Time Left</string>
    <string name="printed">Printed:</string>
    <string name="stauts">Status:</string>
    <string name="set_ip">Set Octoprint IP</string>
    <string name="ip_text">Set your Octoprint IP or Address</string>
    <string name="api">Set Api Key</string>
    <string name="api_text">Set your Octoprint API key</string>
    <string name="refresh">Refresh frequency</string>
    <string name="refresh_text">set the Refresh frequency</string>
    <string name="push_title">Push notification</string>
    <string name="push_summary">Push notification when print is done</string>
    <string name="server_settings">Server Settings</string>
    <string name="update_setting">Update Settings</string>
    <string name="current_temp">Current Temp:</string>
    <string name="target_temp">Target Temp:</string>
    <string name="bed_current_temp">Bed Current Temp:</string>
    <string name="bed_target_temp">Bed Target Temp:</string>
    <string name="send_error">Send error report</string>
    <string name="error_report">Error report</string>
    <string name="send_error_info">Send anonymous error data</string>
    <string name="report_bug">Report bug</string>
    <string name="donate">Donate</string>
    <string name="Send_bug">Submit bug rapport</string>
    <string name="title_activity_sendbug">sendbug</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_card_list">CardList</string>
    <string name="title_activity_gcode">gcode</string>
    <string name="savemode_title">Battery save mode</string>
    <string name="savemode_summary">Do not check for update that frequency</string>
    <string name="setup">Run Setup</string>
    <string name="stick_title">Enable Sticky notification</string>
    <string name="stick_summary">Makes a sticky notification while printing</string>
    <string name="flip_title">Flip camera</string>
    <string name="flip_summary">Flip the webcam</string>
    <string name="rotate_title">Rotate camera</string>
    <string name="rotate_summary">Rotate the webcam</string>
    <string name="basic_authentication">Basic Authentication</string>
    <string name="username_for_authentication">Username for authentication</string>
    <string name="username">Username</string>
    <string name="password_for_authentication">Password for authentication</string>
    <string name="password">Password</string>
</resources>
