<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/server_settings" >
        <EditTextPreference
            android:title="@string/set_ip"
            android:summary="@string/ip_text"
            android:key="ip"/>
        <EditTextPreference
            android:title="@string/api"
            android:summary="@string/api_text"
            android:key="api"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/update_setting" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="push"
            android:summary="@string/push_text"
            android:title="@string/push" >
        </CheckBoxPreference>

        <ListPreference
            android:key="sync"
            android:entries="@array/syncFrequency"
            android:summary="@string/refresh_text"
            android:entryValues="@array/syncFrequencyValues"
            android:title="@string/refresh" />
    </PreferenceCategory>

</PreferenceScreen>