<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#fff3f3f3"
    android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/layout1"
    android:background="#ffdddddd">


    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/print_time_left"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView10"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="37dp"
        android:text="00:00"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView11_time"
        android:layout_below="@id/textView10"/>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="7dp"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_gravity="left|top"
        android:layout_below="@id/textView11_time"/>



    </RelativeLayout>
<FrameLayout
    android:layout_width="match_parent"
    android:background="#9f000000"
    android:id="@+id/spacer1"
    android:layout_below="@id/layout1"
    android:layout_height="2dp">

    </FrameLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fff3f3f3"
        android:layout_below="@id/spacer1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:layout_centerHorizontal="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/stauts"
            android:id="@+id/textView39"/>

        <TextView
            android:layout_marginLeft="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/machine_state"
            android:layout_below="@id/textView39"
            android:id="@+id/textView"/>

    <TextView
        android:layout_marginLeft="7dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/file"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"/>

    <TextView
        android:layout_marginLeft="7dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/filament"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"/>

    <TextView
        android:layout_marginLeft="7dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/estimated_print_time"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3" />

    <TextView
        android:layout_marginLeft="7dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/timelapse"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4" />

    <TextView
        android:layout_marginLeft="7dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/height"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5" />

    <TextView
        android:layout_marginLeft="7dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/printed"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView6" />

        <TextView
            android:layout_marginLeft="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/print_time"
            android:id="@+id/textView18"
            android:layout_below="@+id/textView7" />

        <TextView
            android:layout_marginLeft="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/current_temp"
            android:id="@+id/textView19"
            android:layout_below="@+id/textView18" />



        <TextView
        android:layout_marginLeft="7dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/target_temp"
        android:id="@+id/textView20"
        android:layout_below="@+id/textView19" />

        <TextView
            android:layout_marginLeft="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/bed_current_temp"
            android:id="@+id/textView21"
            android:layout_below="@+id/textView20" />



        <TextView
            android:layout_marginLeft="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/bed_target_temp"
            android:id="@+id/textView22"
            android:layout_below="@+id/textView21" />


        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/textView10_maci"
        android:layout_toEndOf="@id/textView"
        android:layout_toRightOf="@id/textView"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/textView11_file"
        android:layout_toEndOf="@id/textView"
        android:layout_toRightOf="@id/textView"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/textView12_fila"
        android:layout_toEndOf="@id/textView"
        android:layout_toRightOf="@id/textView"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/textView13_est"
        android:layout_toEndOf="@id/textView"
        android:layout_toRightOf="@id/textView"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/textView14_timel"
        android:layout_toEndOf="@id/textView"
        android:layout_toRightOf="@id/textView"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/textView15_hei"
        android:layout_toEndOf="@id/textView"
        android:layout_toRightOf="@id/textView"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/textView16_pri_time"
        android:layout_toEndOf="@id/textView"
        android:layout_toRightOf="@id/textView"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/textView17_pri_left"
        android:layout_toEndOf="@id/textView"
        android:layout_toRightOf="@id/textView"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/textView18_pri"
        android:layout_toEndOf="@id/textView"
        android:layout_toRightOf="@id/textView"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/textView18_cur_T"
            android:layout_toEndOf="@id/textView"
            android:layout_toRightOf="@id/textView"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/textView18_tar_t"
            android:layout_toEndOf="@id/textView"
            android:layout_toRightOf="@id/textView"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/textView18_Bcur_T"
            android:layout_toEndOf="@id/textView"
            android:layout_toRightOf="@id/textView"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/textView18_B"
            android:layout_toEndOf="@id/textView"
            android:layout_toRightOf="@id/textView"/>
</RelativeLayout>
</RelativeLayout>
